--- a/lldb/CMakeLists.txt
+++ b/lldb/CMakeLists.txt
@@ -16,11 +16,18 @@ if (NOT IS_DIRECTORY ${LLDB_PACKAGE})
         COMMAND ${Python} ${CMAKE_SOURCE_DIR}/tools/check_dependencies.py ${CMAKE_CURRENT_BINARY_DIR}/lib ${LLDBAllowedDependencies}
     )
 else()
-    message("${LLDB_PACKAGE} is a directory, symlinking.")
     file(REMOVE_RECURSE ${CMAKE_CURRENT_BINARY_DIR}/bin) # Remove dirs, if any
     file(REMOVE_RECURSE ${CMAKE_CURRENT_BINARY_DIR}/lib)
-    file(CREATE_LINK ${LLDB_PACKAGE}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin SYMBOLIC)
-    file(CREATE_LINK ${LLDB_PACKAGE}/lib ${CMAKE_CURRENT_BINARY_DIR}/lib SYMBOLIC)
+    if(WIN32)
+        # Symbolic link does not work when installing the locally build vsix
+        message("${LLDB_PACKAGE} is a directory, copying.")
+        file(COPY ${LLDB_PACKAGE}/bin DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+        file(COPY ${LLDB_PACKAGE}/lib DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+    else()
+        message("${LLDB_PACKAGE} is a directory, symlinking.")
+        file(CREATE_LINK ${LLDB_PACKAGE}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin SYMBOLIC)
+        file(CREATE_LINK ${LLDB_PACKAGE}/lib ${CMAKE_CURRENT_BINARY_DIR}/lib SYMBOLIC)
+    endif()
     if (NOT DEFINED LLVM_SOURCE_DIR)
         set(LLVM_SOURCE_DIR "${LLDB_PACKAGE}/..")
     endif()
