--- a/debuggee/CMakeLists.txt
+++ b/debuggee/CMakeLists.txt
@@ -43,7 +43,7 @@ endif()
 set(Cargo ${CMAKE_COMMAND} -E env RUSTC_BOOTSTRAP=1 cargo -Zunstable-options)
 
 add_custom_target(rust-debuggee
-    COMMAND ${Cargo} build -p rust-debuggee --bin rust-debuggee ${Target} --out-dir ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND ${Cargo} build -p rust-debuggee --bin rust-debuggee ${Target} --artifact-dir ${CMAKE_CURRENT_BINARY_DIR}
     USES_TERMINAL
 )
 
