--- a/package.json
+++ b/package.json
@@ -29,27 +29,27 @@
 	},
 	"qna": "https://github.com/vadimcn/codelldb/discussions",
 	"engines": {
-		"vscode": "^1.61.0"
+		"vscode": ">=1.80.0"
 	},
 	"dependencies": {
 		"string-argv": "^0.3.2",
-		"yaml": "^1.10.0"
+		"yaml": "^2.8.1"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.60.0",
-		"@types/node": "^14.0.0",
-		"@types/mocha": "^10.0.0",
-		"@vscode/debugprotocol": "^1.53.0",
-		"@vscode/debugadapter-testsupport": "^1.51.0",
-		"typescript": "^4.7.0",
-		"mocha": "^10.8.1",
-		"source-map-support": "^0.5.12",
-		"mocha-suppress-logs": "^0.3.1",
-		"vsce": "^2.8.0",
-		"webpack": "^5.37.1",
-		"webpack-cli": "^4.7.0",
-		"ts-loader": "^8.0.0",
-		"json-pointer": "^0.6.2"
+		"@types/mocha": "^10.0.10",
+		"@types/node": "^22.17.2",
+		"@types/vscode": "^1.80.0",
+		"@vscode/debugadapter-testsupport": "^1.68.0",
+		"@vscode/debugprotocol": "^1.68.0",
+		"json-pointer": "^0.6.2",
+		"mocha": "^11.7.1",
+		"mocha-suppress-logs": "^0.6.0",
+		"source-map-support": "^0.5.21",
+		"ts-loader": "^9.5.2",
+		"typescript": "^5.9.2",
+		"vsce": "^2.15.0",
+		"webpack": "^5.101.3",
+		"webpack-cli": "^6.0.1"
 	},
 	"scripts": {
 		"vsce": "vsce",
