Add support for specifying library in the launch configuration, allowing variable expansion

--- a/package.json
+++ b/package.json
@@ -519,6 +519,12 @@
 						],
 						"scope": "resource",
 						"order": 999
+					},
+					"lldb.launch.library": {
+						"markdownDescription": "Which LLDB library to use.\n\nThis can be either a file path (recommended) or a directory, in which case platform-specific heuristics will be used to locate the actual library file.",
+						"type": "string",
+						"scope": "resource",
+						"order": 11
 					}
 				}
 			},
