Add support for specifying library in the launch configuration, allowing variable expansion

--- a/package.json
+++ b/package.json
@@ -471,6 +471,12 @@
 						],
 						"scope": "resource",
 						"order": 999
+					},
+					"lldb.launch.library": {
+						"markdownDescription": "Which LLDB library to use.\n\nThis can be either a file path (recommended) or a directory, in which case platform-specific heuristics will be used to locate the actual library file.",
+						"type": "string",
+						"scope": "resource",
+						"order": 11
 					}
 				}
 			},
@@ -911,6 +917,10 @@
 									"Resolve locations using full source file path.",
 									"Resolve locations using file name only."
 								]
+							},
+							"library": {
+								"markdownDescription": "Which LLDB library to use.\n\nThis can be either a file path (recommended) or a directory, in which case platform-specific heuristics will be used to locate the actual library file.",
+								"type": "string"
 							}
 						},
 						"anyOf": [
@@ -990,6 +1000,9 @@
 							},
 							"breakpointMode": {
 								"$ref": "#/contributes/debuggers/0/configurationAttributes/launch/properties/breakpointMode"
+							},
+							"library": {
+								"$ref": "#/contributes/debuggers/0/configurationAttributes/launch/properties/library"
 							}
 						}
 					},
